[package]
name = "bonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = {version = "1.3.1", git = "https://github.com/BLAKE3-team/BLAKE3"}
hex = "0.4.3"
jwalk = "0.6.0"
memmap2 = "0.5.4"
rayon = "1.5.3"
